// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View: Component should not render any step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={null}
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/view/1/datasource/list",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <PillButtons
    leftButtonProps={
      Object {
        "onClick": [Function],
        "title": "Back",
      }
    }
    rightButtonProps={
      Object {
        "onClick": [Function],
        "title": "Next",
      }
    }
  />
  <styled.div>
    <Stepper
      activeStep={0}
      customDotStyles={Object {}}
      customStyles={
        Object {
          "margin": "0 auto",
        }
      }
      handleStep={[Function]}
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</styled.div>
`;

exports[`View: Component should not render content 1`] = `<styled.div />`;

exports[`View: Component should render draft 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="Create Data Source"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/view/1/datasource/list",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <Source
    bindSubmitForm={[Function]}
    dataSource={
      Object {
        "id": "id",
        "status": "draft",
      }
    }
    dataWrangling={Array []}
    fetchDataSource={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    unmountDataSource={[Function]}
    updateDataSource={[Function]}
  />
  <PillButtons
    leftButtonProps={
      Object {
        "onClick": [Function],
        "title": "Cancel",
      }
    }
    rightButtonProps={
      Object {
        "onClick": [Function],
        "title": "Next",
      }
    }
  />
  <styled.div>
    <Stepper
      activeStep={1}
      customDotStyles={Object {}}
      customStyles={
        Object {
          "margin": "0 auto",
          "pointerEvents": "none",
        }
      }
      handleStep={[Function]}
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</styled.div>
`;

exports[`View: Component should render second step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/view/1/datasource/list",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <Source
    bindSubmitForm={[Function]}
    dataSource={
      Object {
        "id": "id",
        "name": "name",
        "step": "2",
      }
    }
    dataWrangling={Array []}
    fetchDataSource={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    unmountDataSource={[Function]}
    updateDataSource={[Function]}
  />
  <PillButtons
    leftButtonProps={
      Object {
        "onClick": [Function],
        "title": "Cancel",
      }
    }
    rightButtonProps={
      Object {
        "onClick": [Function],
        "title": "Next",
      }
    }
  />
  <styled.div>
    <Stepper
      activeStep={1}
      customDotStyles={Object {}}
      customStyles={
        Object {
          "margin": "0 auto",
        }
      }
      handleStep={[Function]}
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</styled.div>
`;

exports[`View: Component should render source step 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle="Source"
    headerTitle="name"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Data source list",
          "to": "/project/view/1/datasource/list",
        },
        Object {
          "label": "Remove Data Source",
          "onClick": [Function],
        },
      ]
    }
  />
  <Source
    bindSubmitForm={[Function]}
    dataSource={
      Object {
        "id": "id",
        "name": "name",
      }
    }
    dataWrangling={Array []}
    fetchDataSource={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "projectId": "1",
          "step": "1",
        },
      }
    }
    removeDataSource={[Function]}
    unmountDataSource={[Function]}
    updateDataSource={[Function]}
  />
  <PillButtons
    leftButtonProps={
      Object {
        "onClick": [Function],
        "title": "Cancel",
      }
    }
    rightButtonProps={
      Object {
        "onClick": [Function],
        "title": "Next",
      }
    }
  />
  <styled.div>
    <Stepper
      activeStep={1}
      customDotStyles={Object {}}
      customStyles={
        Object {
          "margin": "0 auto",
        }
      }
      handleStep={[Function]}
      onStepChange={[Function]}
      steps={6}
    />
  </styled.div>
</styled.div>
`;
